# automated-emails

./: .gitignore  main.py  pyproject.toml
