[project]
name = "app-7-automated-emails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.2",
    "certifi>=2025.4.26",
    "chardet>=5.2.0",
    "cssselect>=1.3.0",
    "cssutils>=2.11.1",
    "et-xmlfile>=2.0.0",
    "idna>=3.10",
    "jdcal>=1.4.1",
    "lxml>=5.4.0",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "premailer>=3.10.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "six>=1.17.0",
    "urllib3>=2.4.0",
    "yagmail>=0.15.293",
]
